blue-green/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-app-gateway-nodeport
spec:
  selector:
    app.kubernetes.io/name: blue-green-app-gateway-nginx # controller pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
