blue-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-app
  labels:
    app: blue-green-app
spec:
  selector:
    app: blue-green-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
