blue-green/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-green-app-route
spec:
  parentRefs:
    - name: blue-green-app-gateway
  rules:
    - backendRefs:
        - name: blue-green-app
          port: 80
